# BEVFusion

./: .gitignore  README.md
scripts/: camera_to_bev.py  dataloader.py  export_onnx.py  read_nuscenes.py  run_bevfusion.py  run_lss.py  run_point_pillars.py  test.py  train.py  visualize.py
src/: util.py
src/backbones/: tools.py
src/camera/: lss.py
src/cpp/: CMakeLists.txt  camera_pipeline.cpp  camera_pipeline.h  infer.cpp  lidar_pipeline.cpp  lidar_pipeline.h  pillarize.cpp  pillarize.h
src/fusion/: bev_encoder.py  bev_pipeline.py  detection_head.py  pipeline.py
src/lidar/: backbone.py  pillarize.py  point_pillars.py  pointnet.py
